--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
     <title>About me</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Veronika Balakhovsky</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav ml-auto">
-          
-            <a class="nav-link" href="portfolio.html">Portfolio</a>
-            <a class="nav-link" href="apps.html">Coding Projects</a>
-            <a class="nav-link" href="prjct.html">Essential Connection Project</a>
-            <a class="nav-link active" href="#">About me<span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="https://github.com/vbalakhovsky">Github</a>
-            <a class="nav-link" href="contact.html">Contact</a>
-          </div>
-        </div>
-      </nav>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Veronika Balakhovsky</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav ml-auto">
+        <a class="nav-link active" href="index.html">About me<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="resume.html">Resume </a>
+        <a class="nav-link" href="apps.html">Coding Projects</a>
+        <a class="nav-link" href="art.html">My Paintings</a>
+        <a class="nav-link" href="prjct.html">Team Projects</a>
+        <a class="nav-link" href="https://github.com/vbalakhovsky">Github</a>
+        <a class="nav-link" href="contact.html">Contact</a>
+      </div>
+    </div>
+  </nav>
 
 <br>
 <br>
@@ -39,7 +39,7 @@
 
 <p>I am a painter and I live in New York. I am coming to see the logic and the philosophy of coding that is not as removed from the work process of a painter as I thought.  I enjoy how, just like in painting, stepping away from the first intuitive choice sometimes reveals to me the connection between different elements of my work. </p>
 
-   <p> It has been a little over two months since I began learning to code. While I still have a long road ahead of me, before I can confidently call myself a full stack developer, I have learned so much. I still feel amazed by the fact that I can write code and it works! During these months I have had success and failure, broke and repaired code. There were times when I stared at the computer screen and didn’t understand a thing, and there were times when the logic of coding sang to me in the lines of JavaScript. Here are my modest, but tremendously gratifying first coding milestones.   
+   <p> It has been a little over four months since I began learning to code. While I still have a long road ahead of me, before I can confidently call myself a full stack developer, I have learned so much. I still feel amazed by the fact that I can write code and it works! During these months I have had success and failure, broke and repaired code. There were times when I stared at the computer screen and didn’t understand a thing, and there were times when the logic of coding sang to me in the lines of JavaScript. Here are my modest, but tremendously gratifying first coding milestones.   
   </p>
   
 
@@ -47,10 +47,10 @@
       <br>
 
 <div class = "buttonField">
-  
+     <a class="btn" href="resume.html">Resume</a>
       <a class="btn" href="apps.html">My Apps</a>
-      <a class="btn" href="prjct.html">My First Project</a>
-      <a class="btn" href="portfolio.html">My Paintings</a>
+      <a class="btn" href="prjct.html">Team Projects</a>
+      <a class="btn" href="art.html">My Paintings</a>
       <br>
     </div>
 
